--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -32,6 +36,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:+'
     implementation project(":chat")
+//    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+//    implementation "com.squareup.okhttp3:okhttp:3.11.0"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
