--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -16,10 +16,6 @@ android {
         consumerProguardFiles 'consumer-rules.pro'
     }
 
-//    dataBinding {
-//        enabled = true
-//    }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -49,6 +45,7 @@ ext {
     roomVersion = '2.2.4'
     okHttpVersion = '4.6.0'
     kotlin_version = '1.3.61'
+    daggerVersion = '2.27'
 }
 
 dependencies {
@@ -61,6 +58,9 @@ dependencies {
     implementation "com.google.android.material:material:${materialVersion}"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
 
+    // DI
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
