--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -46,6 +47,8 @@ ext {
     okHttpVersion = '4.6.0'
     kotlin_version = '1.3.61'
     daggerVersion = '2.27'
+    firebaseMessagingServiceVersion = '20.2.4'
+    firebaseAnalyticsVersion = '17.5.0'
 }
 
 dependencies {
@@ -83,7 +86,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     // Saved state module for ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion"
-
+    // Push
+    implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersion"
+    implementation "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
