--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -50,6 +50,7 @@ ext {
     firebaseMessagingServiceVersion = '20.2.4'
     firebaseAnalyticsVersion = '17.5.0'
     paginationVersion = '2.1.2'
+    photoViewVersion = '2.3.0'
 }
 
 dependencies {
@@ -90,9 +91,10 @@ dependencies {
     // Push
     implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersion"
     implementation "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion"
-
     // Pagination
     implementation "android.arch.paging:runtime:$paginationVersion"
+    // Zooming photo
+    implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
