--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -51,6 +51,7 @@ ext {
     firebaseAnalyticsVersion = '17.5.0'
     paginationVersion = '2.1.2'
     photoViewVersion = '2.3.0'
+    securityPreferencesVersion = '1.1.0-alpha03'
 }
 
 dependencies {
@@ -95,6 +96,8 @@ dependencies {
     implementation "android.arch.paging:runtime:$paginationVersion"
     // Zooming photo
     implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
+    // EncryptedSharedPreferences
+    implementation "androidx.security:security-crypto:$securityPreferencesVersion"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
