--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 29
@@ -103,4 +104,40 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                group = 'com.github.crafttalk'
+                artifactId = 'chat-client-android'
+                version = '1.1.0'
+
+                pom {
+                    name = 'chat-client-android'
+                    url = 'https://github.com/crafttalk/crafttalk-android-sdk'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'cactus666'
+                            name = 'Ivan Shust'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git@github.com/crafttalk/crafttalk-android-sdk.git'
+                        developerConnection = 'scm:git@github.com/crafttalk/crafttalk-android-sdk.git'
+                        url = 'https://github.com/crafttalk/crafttalk-android-sdk'
+                    }
+                }
+            }
+        }
+    }
 }
