--- a/chat/src/main/AndroidManifest.xml
+++ b/chat/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.crafttalk.chat" />
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    package="com.crafttalk.chat">
+    <uses-sdk tools:overrideLibrary="androidx.security"/>
+</manifest>
