--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,12 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.crafttalk.sampleChat"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -33,7 +34,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.google.android.material:material:+'
+//    implementation 'com.github.crafttalk:crafttalk-android-sdk:1.1.0'
     implementation project(":chat")
+
+//    Multidex
+    implementation "androidx.multidex:multidex:2.0.1"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
