--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -45,7 +45,7 @@ ext {
     coroutinesVersion = '1.3.0'
     glideVersion = '4.11.0'
     roomVersion = '2.2.4'
-    okHttpVersion = '4.6.0'
+    okHttpVersion = '3.12.8'
     kotlin_version = '1.3.61'
     daggerVersion = '2.27'
     firebaseMessagingServiceVersion = '20.2.4'
@@ -81,6 +81,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 //    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
     // OkHttp
+    implementation("com.squareup.okhttp3:okhttp:${okHttpVersion}") {
+        force = true
+    }
     implementation "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
     // Socket
     implementation "com.github.nkzawa:socket.io-client:$socketVersion"
