--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -53,6 +53,7 @@ ext {
     paginationVersion = '2.1.2'
     photoViewVersion = '2.3.0'
     securityPreferencesVersion = '1.1.0-alpha03'
+    constraintlayoutVersion = '1.1.3'
 }
 
 dependencies {
@@ -61,6 +62,7 @@ dependencies {
     implementation "androidx.core:core-ktx:${coreVersion}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:${appCompat}"
+    implementation "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}"
     implementation "androidx.recyclerview:recyclerview:${androidXRecyclerViewVersion}"
     implementation "com.google.android.material:material:${materialVersion}"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
