--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -54,6 +54,7 @@ ext {
     photoViewVersion = '2.3.0'
     securityPreferencesVersion = '1.1.0-alpha03'
     constraintlayoutVersion = '1.1.3'
+    inputMaskVersion = '6.0.0'
 }
 
 dependencies {
@@ -104,6 +105,8 @@ dependencies {
     implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
     // EncryptedSharedPreferences
     implementation "androidx.security:security-crypto:$securityPreferencesVersion"
+    // mask
+    implementation "com.redmadrobot:input-mask-android:$inputMaskVersion"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
