--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.google.android.material:material:+'
-//    implementation 'com.github.crafttalk:crafttalk-android-sdk:1.1.0'
-    implementation project(":chat")
+    implementation 'com.github.crafttalk:crafttalk-android-sdk:1.1.13'
 
 //    Multidex
     implementation "androidx.multidex:multidex:2.0.1"
