--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -40,7 +40,7 @@ ext {
     materialVersion = '1.1.0'
     fragmentKtxVersion = '1.3.0-alpha06'
     activityKtxVersion = '1.2.0-alpha06'
-    socketVersion = '0.6.0'
+    socketVersion = '1.0.1'
     retrofitVersion = '2.8.1'
     coroutinesVersion = '1.3.0'
     glideVersion = '4.11.0'
@@ -89,7 +89,7 @@ dependencies {
     }
     implementation "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
     // Socket
-    implementation "com.github.nkzawa:socket.io-client:$socketVersion"
+    implementation "io.socket:socket.io-client:$socketVersion"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     // LiveData
