Activity Result API update

--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -38,8 +38,7 @@ ext {
     archVersion = '2.1.0'
     androidXRecyclerViewVersion = '1.1.0'
     materialVersion = '1.1.0'
-    fragmentKtxVersion = '1.3.0-alpha06'
-    activityKtxVersion = '1.2.0-alpha06'
+    fragmentKtxVersion = '1.3.4'
     socketVersion = '1.0.1'
     retrofitVersion = '2.8.1'
     coroutinesVersion = '1.3.0'
