--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -56,7 +56,7 @@ ext {
     daggerVersion = '2.34'
     firebaseMessagingServiceVersion = '20.2.4'
     firebaseAnalyticsVersion = '17.5.0'
-    paginationVersion = '2.1.2'
+    paginationVersion = '3.1.0'
     photoViewVersion = '2.3.0'
     securityPreferencesVersion = '1.1.0-alpha03'
     constraintlayoutVersion = '1.1.3'
@@ -106,7 +106,7 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersion"
     implementation "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion"
     // Pagination
-    implementation "androidx.paging:paging-runtime-ktx:$paginationVersion"
+    implementation "androidx.paging:paging-runtime:$paginationVersion"
     // Zooming photo
     implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
     // EncryptedSharedPreferences
