--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
 //    Multidex
     implementation "androidx.multidex:multidex:2.0.1"
+//    Glide
+    implementation "com.github.bumptech.glide:glide:4.11.0"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
