--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -51,7 +51,7 @@ ext {
     coroutinesVersion = '1.3.0'
     glideVersion = '4.11.0'
     roomVersion = '2.2.4'
-    okHttpVersion = '3.12.8'
+    okHttpVersion = '4.9.3'
     kotlin_version = '1.5.30'
     daggerVersion = '2.34'
     firebaseMessagingServiceVersion = '23.0.8'
@@ -90,10 +90,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 //    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
     // OkHttp
-    implementation("com.squareup.okhttp3:okhttp:${okHttpVersion}") {
-        force = true
-    }
-    implementation "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
     // Socket
     implementation "io.socket:socket.io-client:$socketVersion"
     // ViewModel
