--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -37,41 +37,42 @@ android {
 }
 
 ext {
-    appCompat = '1.1.0'
+    appCompatVersion = '1.1.0'
     coreVersion = '1.5.0'
-    constraintLayout = '1.1.3'
-    testRunner = '1.0.2'
+    constraintlayoutVersion = '2.1.4'
     lifecycleVersion = '2.2.0'
-    archVersion = '2.1.0'
-    androidXRecyclerViewVersion = '1.1.0'
+    androidXRecyclerViewVersion = '1.2.1'
     materialVersion = '1.4.0'
     fragmentKtxVersion = '1.3.4'
     socketVersion = '1.0.2'
-    retrofitVersion = '2.8.1'
-    coroutinesVersion = '1.3.0'
-    glideVersion = '4.11.0'
+    retrofitVersion = '2.9.0'
+    coroutinesVersion = '1.6.4'
+    glideVersion = '4.13.2'
     roomVersion = '2.2.4'
-    okHttpVersion = '4.9.3'
+    okHttpVersion = '4.10.0'
     kotlin_version = '1.5.30'
-    daggerVersion = '2.34'
+    daggerVersion = '2.43.2'
     firebaseMessagingServiceVersion = '23.0.8'
     firebaseAnalyticsVersion = '21.1.1'
-    paginationVersion = '3.1.0'
+    paginationVersion = '3.1.1'
     photoViewVersion = '2.3.0'
     securityPreferencesVersion = '1.1.0-alpha03'
-    constraintlayoutVersion = '1.1.3'
     inputMaskVersion = '6.0.0'
+    junitVersion = '4.13.2'
+    testRulesVersion = '1.4.0'
+    testRunnerVersion = '1.4.0'
+    espressoVersion = '3.4.0'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.core:core-ktx:${coreVersion}"
+    implementation "androidx.core:core-ktx:$coreVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:${appCompat}"
-    implementation "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}"
-    implementation "androidx.recyclerview:recyclerview:${androidXRecyclerViewVersion}"
-    implementation "com.google.android.material:material:${materialVersion}"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
+    implementation "androidx.recyclerview:recyclerview:$androidXRecyclerViewVersion"
+    implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
 
     // DI
@@ -112,10 +113,10 @@ dependencies {
     // mask
     implementation "com.github.RedMadRobot:input-mask-android:$inputMaskVersion"
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test:rules:$testRulesVersion"
+    androidTestImplementation "androidx.test:runner:$testRunnerVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
 }
 
 project.afterEvaluate {
