--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,24 @@
             android:value="@string/default_notification_channel_id" />
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" >
+            android:name=".auth.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".chat.ChatActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".chat_with_counter.ChatActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".web_view.WebViewActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <service
             android:name="com.crafttalk.chat.data.push.ChatPushService"
             android:exported="false">
