--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".web_view.WebViewActivity"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
         <service
             android:name="com.crafttalk.chat.data.push.ChatPushService"
             android:exported="false">
