--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 34
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.crafttalk.sampleChat"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -26,6 +26,13 @@ android {
     }
 }
 
+ext {
+    retrofitVersion = '2.9.0'
+    kotlin_version = '1.5.30'
+    firebaseMessagingServiceVersion = '23.0.8'
+    firebaseAnalyticsVersion = '21.1.1'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -41,6 +48,12 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
 //    Glide
     implementation "com.github.bumptech.glide:glide:4.11.0"
+//    Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+//    Push
+    implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersion"
+    implementation "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:rules:1.3.0'
