--- a/chat/src/main/AndroidManifest.xml
+++ b/chat/src/main/AndroidManifest.xml
@@ -1,4 +1,14 @@
-<manifest xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.crafttalk.chat">
-    <uses-sdk tools:overrideLibrary="androidx.security"/>
+
+    <uses-sdk tools:overrideLibrary="androidx.security" />
+
+    <application>
+        <activity
+            android:name=".presentation.feature.view_picture.ShowMediaDialog2"
+            android:exported="false" />
+    </application>
+
 </manifest>
