--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -1,19 +1,23 @@
-
-//apply plugin: 'com.google.devtools.ksp'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'maven-publish'
 
+kapt {
+    javacOptions {
+        option("-source", "8")
+        option("-target", "8")
+    }
+}
+
 android {
-    namespace "com.crafttalk.chat"
     compileSdkVersion 34
-    //buildToolsVersion "29.0.3"
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 34
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -26,14 +30,7 @@ android {
         }
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_17.toString()
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    buildFeatures {
-        viewBinding true
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -63,51 +60,50 @@ ext {
     testRulesVersion = '1.4.0'
     testRunnerVersion = '1.4.0'
     espressoVersion = '3.4.0'
-    activity = '1.7.0'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.activity:activity-ktx:1.9.3"
-    implementation "androidx.core:core-ktx:1.13.0"
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.7.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.2.0"
-    implementation "androidx.recyclerview:recyclerview:1.3.2"
-    implementation "com.google.android.material:material:1.12.0"
-    implementation "androidx.fragment:fragment-ktx:1.8.5"
+    implementation "androidx.core:core-ktx:$coreVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
+    implementation "androidx.recyclerview:recyclerview:$androidXRecyclerViewVersion"
+    implementation "com.google.android.material:material:$materialVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
+
     // DI
-    implementation "com.google.dagger:dagger:2.52"
-    kapt "com.google.dagger:dagger-compiler:2.52"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     // Glide
-    implementation "com.github.bumptech.glide:glide:4.13.2"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.11.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.11.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 //    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
     // OkHttp
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
     // Socket
-    implementation "io.socket:socket.io-client:2.1.1"
+    implementation "io.socket:socket.io-client:$socketVersion"
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     // Saved state module for ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion"
     // Push
-    implementation "com.google.firebase:firebase-messaging-ktx:24.1.0"
-    implementation "com.google.firebase:firebase-analytics-ktx:22.1.2"
+    implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersion"
+    implementation "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion"
     // Pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.3.4"
+    implementation "androidx.paging:paging-runtime:$paginationVersion"
     // Zooming photo
     implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
     // EncryptedSharedPreferences
