--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,62 +1,158 @@
-apply plugin: 'com.android.application'
+
+//apply plugin: 'com.google.devtools.ksp'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'maven-publish'
 
 android {
+    namespace "com.crafttalk.chat"
     compileSdkVersion 34
-    buildToolsVersion "29.0.3"
+    //buildToolsVersion "29.0.3"
+
     defaultConfig {
-        applicationId "com.crafttalk.sampleChat"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
+        consumerProguardFiles 'consumer-rules.pro'
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_17.toString()
+    }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    buildFeatures {
+        viewBinding true
     }
 }
 
 ext {
+    appCompatVersion = '1.1.0'
+    coreVersion = '1.5.0'
+    constraintlayoutVersion = '2.1.4'
+    lifecycleVersion = '2.2.0'
+    androidXRecyclerViewVersion = '1.2.1'
+    materialVersion = '1.4.0'
+    fragmentKtxVersion = '1.3.4'
+    socketVersion = '2.1.0'
     retrofitVersion = '2.9.0'
+    coroutinesVersion = '1.6.4'
+    glideVersion = '4.13.2'
+    roomVersion = '2.2.4'
+    okHttpVersion = '4.10.0'
     kotlin_version = '1.5.30'
+    daggerVersion = '2.43.2'
     firebaseMessagingServiceVersion = '23.0.8'
     firebaseAnalyticsVersion = '21.1.1'
+    paginationVersion = '3.1.1'
+    photoViewVersion = '2.3.0'
+    securityPreferencesVersion = '1.1.0-alpha03'
+    inputMaskVersion = '6.0.0'
+    junitVersion = '4.13.2'
+    testRulesVersion = '1.4.0'
+    testRunnerVersion = '1.4.0'
+    espressoVersion = '3.4.0'
+    activity = '1.7.0'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation project(":chat")
-//    implementation 'com.github.crafttalk:crafttalk-android-sdk:1.2.3'
-
-//    Multidex
-    implementation "androidx.multidex:multidex:2.0.1"
-//    Glide
+    implementation "androidx.activity:activity-ktx:1.9.3"
+    implementation "androidx.core:core-ktx:1.13.0"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
+    implementation "com.google.android.material:material:1.12.0"
+    implementation "androidx.fragment:fragment-ktx:1.8.5"
+    // DI
+    implementation "com.google.dagger:dagger:2.52"
+    kapt "com.google.dagger:dagger-compiler:2.52"
+    // Room
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    // Glide
     implementation "com.github.bumptech.glide:glide:4.13.2"
-//    Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-//    Push
-    implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersion"
-    implementation "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion"
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0"
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.11.0"
+//    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+    // OkHttp
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
+    // Socket
+    implementation "io.socket:socket.io-client:2.1.1"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
+    // Saved state module for ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.7"
+    // Push
+    implementation "com.google.firebase:firebase-messaging-ktx:24.1.0"
+    implementation "com.google.firebase:firebase-analytics-ktx:22.1.2"
+    // Pagination
+    implementation "androidx.paging:paging-runtime-ktx:3.3.4"
+    // Zooming photo
+    implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
+    // EncryptedSharedPreferences
+    implementation "androidx.security:security-crypto:$securityPreferencesVersion"
+    // mask
+    implementation "com.github.RedMadRobot:input-mask-android:$inputMaskVersion"
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test:rules:$testRulesVersion"
+    androidTestImplementation "androidx.test:runner:$testRunnerVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+}
+
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                group = 'com.github.crafttalk'
+                artifactId = 'chat-client-android'
+                version = '1.1.0'
+
+                pom {
+                    name = 'chat-client-android'
+                    url = 'https://github.com/crafttalk/crafttalk-android-sdk'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'cactus666'
+                            name = 'Ivan Shust'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git@github.com/crafttalk/crafttalk-android-sdk.git'
+                        developerConnection = 'scm:git@github.com/crafttalk/crafttalk-android-sdk.git'
+                        url = 'https://github.com/crafttalk/crafttalk-android-sdk'
+                    }
+                }
+            }
+        }
+    }
 }
