--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.crafttalk.sampleChat">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -22,7 +21,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="androidx.multidex.MultiDexApplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <meta-data
@@ -30,7 +28,7 @@
             android:value="@string/default_notification_channel_id" />
         <activity
             android:screenOrientation="portrait"
-            android:name=".auth.AuthActivity"
+            android:name="com.crafttalk.sampleChat.auth.AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,15 +37,15 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name=".chat.ChatActivity"
+            android:name="com.crafttalk.sampleChat.chat.ChatActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:screenOrientation="portrait"
-            android:name=".chat_with_counter.ChatActivity"
+            android:name="com.crafttalk.sampleChat.chat_with_counter.ChatActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:screenOrientation="portrait"
-            android:name=".web_view.WebViewActivity"
+            android:name="com.crafttalk.sampleChat.web_view.WebViewActivity"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
         <service
             android:name="com.crafttalk.chat.data.push.ChatPushService"
@@ -65,6 +63,18 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+        <!-- Trigger Google Play services to install the backported photo picker module. -->
+        <!--suppress AndroidDomInspection -->
+        <service android:name="com.google.android.gms.metadata.ModuleDependencies"
+            android:enabled="false"
+            android:exported="false"
+            tools:ignore="MissingClass">
+            <intent-filter>
+                <action android:name="com.google.android.gms.metadata.MODULE_DEPENDENCIES" />
+            </intent-filter>
+            <meta-data android:name="photopicker_activity:0:required" android:value="" />
+        </service>
+
     </application>
 
 </manifest>
