фикс сборки проекта

--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -51,7 +51,7 @@ ext {
     glideVersion = '4.13.2'
     roomVersion = '2.2.4'
     okHttpVersion = '4.10.0'
-    kotlin_version = '1.5.30'
+    kotlin_version = '1.8.20'
     daggerVersion = '2.43.2'
     firebaseMessagingServiceVersion = '23.0.8'
     firebaseAnalyticsVersion = '21.1.1'
@@ -113,7 +113,8 @@ dependencies {
     // EncryptedSharedPreferences
     implementation "androidx.security:security-crypto:$securityPreferencesVersion"
     // mask
-    implementation "com.github.RedMadRobot:input-mask-android:$inputMaskVersion"
+//    implementation "com.github.RedMadRobot:input-mask-android:$inputMaskVersion"
+    implementation "com.redmadrobot:input-mask-android:$inputMaskVersion"
 
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test:rules:$testRulesVersion"
