Add sticker message support and related functionality Add option feedback visability Fix problem with document link

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,5 @@ org.gradle.caching=true
 # Configure parallel execution for all tasks. Parallelism can improve build times if multiple
 # CPU cores are available.
 org.gradle.parallel=true
+# Enables the Gradle configuration cache, which speeds up project configuration time by caching
+org.gradle.configuration-cache=true
